--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
   "name": "bloop-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "description": "Next-generation AI-powered development environment with advanced code intelligence",
+  "author": "Bloop Team <bloopcode@proton.me>",
+  "license": "MIT",
+  "homepage": "https://github.com/BloopTeam/Bloop-UI",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BloopTeam/Bloop-UI.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BloopTeam/Bloop-UI/issues"
+  },
+  "keywords": [
+    "ide",
+    "code-editor",
+    "ai-assistant",
+    "development-environment",
+    "typescript",
+    "react",
+    "vite",
+    "syntax-highlighting",
+    "code-analysis"
+  ],
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "dev": "vite",
@@ -12,7 +35,10 @@
     "build:check": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
     "react": "^18.2.0",
