--- a/package.json
+++ b/package.json
@@ -30,15 +30,13 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:check": "tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\""
+    "dev": "trunk serve",
+    "build": "trunk build --release",
+    "preview": "trunk serve",
+    "lint": "cargo clippy",
+    "lint:fix": "cargo clippy --fix",
+    "format": "cargo fmt",
+    "format:check": "cargo fmt --check"
   },
   "dependencies": {
     "react": "^18.2.0",
