--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "installCommand": "echo 'Skipping npm install - using Rust build'",
+  "framework": null
 }
