Optimize Vercel build: add caching and faster Rust/Trunk installation

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,18 @@
   "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh",
   "outputDirectory": "dist",
   "installCommand": "echo 'Skipping npm install - using Rust build'",
-  "framework": null
+  "framework": null,
+  "crons": [],
+  "functions": {},
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
