--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ gloo-storage = "0.3"
 console_error_panic_hook = "0.1"
 
 [profile.release]
-opt-level = "z"
-lto = true
+opt-level = "s"
+lto = "thin"
 codegen-units = 1
 panic = "abort"
+strip = true
